--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -11,20 +11,59 @@
         <!--Journal-->
         <scene sceneID="9Mu-cQ-ZdF">
             <objects>
-                <tableViewController id="Nzd-F6-4PU" customClass="JournalTableViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="Nzd-F6-4PU" customClass="EntriesTableViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="wbI-vK-aH3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="JournalCell" id="5Ur-9b-2j4">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="JournalCell" id="5Ur-9b-2j4" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="39.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="5Ur-9b-2j4" id="6ag-Lh-rAA">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="39.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="zhd-sX-Q5s">
+                                            <rect key="frame" x="10" y="2" width="394" height="35.5"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="evS-iH-sBY">
+                                                    <rect key="frame" x="0.0" y="0.0" width="394" height="20.5"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0PB-cx-4VG">
+                                                            <rect key="frame" x="0.0" y="0.0" width="193" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="timeStamp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QX7-oY-sBL">
+                                                            <rect key="frame" x="201" y="0.0" width="193" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="bodyText" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zf6-Sl-L8y">
+                                                    <rect key="frame" x="0.0" y="20.5" width="394" height="15"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="zhd-sX-Q5s" firstAttribute="leading" secondItem="6ag-Lh-rAA" secondAttribute="leading" constant="10" id="2mc-Cd-4mF"/>
+                                        <constraint firstItem="zhd-sX-Q5s" firstAttribute="top" secondItem="6ag-Lh-rAA" secondAttribute="top" constant="2" id="IGD-mM-H91"/>
+                                        <constraint firstAttribute="bottom" secondItem="zhd-sX-Q5s" secondAttribute="bottom" constant="2" id="MUv-mc-2gb"/>
+                                        <constraint firstAttribute="trailing" secondItem="zhd-sX-Q5s" secondAttribute="trailing" constant="10" id="c0p-qH-OdX"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="bodyTextLabel" destination="Zf6-Sl-L8y" id="Z2m-wu-NkA"/>
+                                    <outlet property="timeStampLabel" destination="QX7-oY-sBL" id="8qc-da-loc"/>
+                                    <outlet property="titleLabel" destination="0PB-cx-4VG" id="YWC-Zk-dDN"/>
                                     <segue destination="eeX-vX-muU" kind="show" identifier="ShowJournalDetailSegue" id="5ht-HD-Z8n"/>
                                 </connections>
                             </tableViewCell>
@@ -85,7 +124,17 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="sYe-1C-FOA"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Title" id="5Kt-Ci-hTl"/>
+                    <navigationItem key="navigationItem" title="Title" id="5Kt-Ci-hTl">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="c58-3q-yIC">
+                            <connections>
+                                <action selector="saveJournalEntry:" destination="eeX-vX-muU" id="I4v-iA-RkN"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="bodytextTextField" destination="dRj-jW-OYt" id="4Jh-t0-QDT"/>
+                        <outlet property="titleTextField" destination="ZGr-dZ-ujE" id="8Lu-6Y-SAn"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LE8-7U-O0G" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
