--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -89,12 +89,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter A title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1Nk-oo-74R">
-                                <rect key="frame" x="16" y="108" width="382" height="34"/>
+                                <rect key="frame" x="16" y="147" width="382" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="nSm-qo-0cn">
-                                <rect key="frame" x="16" y="150" width="382" height="350"/>
+                                <rect key="frame" x="16" y="189" width="382" height="350"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="350" id="aoj-NA-Wll"/>
@@ -103,15 +103,26 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="bqy-zQ-RdR">
+                                <rect key="frame" x="16" y="108" width="382" height="32"/>
+                                <segments>
+                                    <segment title="😃"/>
+                                    <segment title="😐"/>
+                                    <segment title="🙁"/>
+                                </segments>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" systemColor="opaqueSeparatorColor" red="0.77647058820000003" green="0.77647058820000003" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="75e-QT-Uvz" firstAttribute="trailing" secondItem="bqy-zQ-RdR" secondAttribute="trailing" constant="16" id="0w6-M1-giz"/>
+                            <constraint firstItem="1Nk-oo-74R" firstAttribute="top" secondItem="bqy-zQ-RdR" secondAttribute="bottom" constant="8" id="3rd-DM-W71"/>
+                            <constraint firstItem="bqy-zQ-RdR" firstAttribute="top" secondItem="75e-QT-Uvz" secondAttribute="top" constant="20" id="6Hf-vr-vzM"/>
                             <constraint firstItem="nSm-qo-0cn" firstAttribute="top" secondItem="1Nk-oo-74R" secondAttribute="bottom" constant="8" id="FNh-Ni-DPW"/>
                             <constraint firstItem="75e-QT-Uvz" firstAttribute="trailing" secondItem="nSm-qo-0cn" secondAttribute="trailing" constant="16" id="Fuk-9q-4q1"/>
-                            <constraint firstItem="1Nk-oo-74R" firstAttribute="top" secondItem="75e-QT-Uvz" secondAttribute="top" constant="20" id="htP-uE-m41"/>
                             <constraint firstItem="nSm-qo-0cn" firstAttribute="leading" secondItem="75e-QT-Uvz" secondAttribute="leading" constant="16" id="roQ-FJ-IYi"/>
                             <constraint firstItem="75e-QT-Uvz" firstAttribute="trailing" secondItem="1Nk-oo-74R" secondAttribute="trailing" constant="16" id="yvc-ha-mQ2"/>
                             <constraint firstItem="1Nk-oo-74R" firstAttribute="leading" secondItem="75e-QT-Uvz" secondAttribute="leading" constant="16" id="zH5-qx-aUC"/>
+                            <constraint firstItem="bqy-zQ-RdR" firstAttribute="leading" secondItem="75e-QT-Uvz" secondAttribute="leading" constant="16" id="zff-Qt-zMe"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="75e-QT-Uvz"/>
                     </view>
