--- a/Journal/Journal/Views/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Views/Base.lproj/Main.storyboard
@@ -91,21 +91,54 @@
             </objects>
             <point key="canvasLocation" x="-16" y="113"/>
         </scene>
-        <!--View Controller-->
+        <!--Entry Detail View Controller-->
         <scene sceneID="1Qg-qq-iHl">
             <objects>
-                <viewController id="g8B-5d-0Le" sceneMemberID="viewController">
+                <viewController id="g8B-5d-0Le" customClass="EntryDetailViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="GcF-2w-C7f">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kZh-IJ-D6a">
+                                <rect key="frame" x="20" y="150" width="374" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="lMS-yr-Kgv">
+                                <rect key="frame" x="20" y="192" width="374" height="670"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="lMS-yr-Kgv" firstAttribute="leading" secondItem="hqI-4l-v99" secondAttribute="leading" constant="20" id="0qk-c8-4Vt"/>
+                            <constraint firstItem="kZh-IJ-D6a" firstAttribute="top" secondItem="hqI-4l-v99" secondAttribute="top" constant="10" id="2O9-Jk-IiP"/>
+                            <constraint firstItem="hqI-4l-v99" firstAttribute="trailing" secondItem="kZh-IJ-D6a" secondAttribute="trailing" constant="20" id="F9g-Ay-V35"/>
+                            <constraint firstItem="hqI-4l-v99" firstAttribute="trailing" secondItem="lMS-yr-Kgv" secondAttribute="trailing" constant="20" id="J9G-kL-uWB"/>
+                            <constraint firstItem="kZh-IJ-D6a" firstAttribute="leading" secondItem="hqI-4l-v99" secondAttribute="leading" constant="20" id="W4Z-qp-o8G"/>
+                            <constraint firstItem="lMS-yr-Kgv" firstAttribute="bottom" secondItem="hqI-4l-v99" secondAttribute="bottom" id="gr6-cF-OAL"/>
+                            <constraint firstItem="lMS-yr-Kgv" firstAttribute="top" secondItem="kZh-IJ-D6a" secondAttribute="bottom" constant="8" id="zNz-5c-ajk"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="hqI-4l-v99"/>
                     </view>
-                    <navigationItem key="navigationItem" id="OJk-t5-ggC"/>
+                    <navigationItem key="navigationItem" id="OJk-t5-ggC">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="rox-jP-bx8">
+                            <connections>
+                                <action selector="saveEntry:" destination="g8B-5d-0Le" id="L5T-66-nGt"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="entryTextField" destination="kZh-IJ-D6a" id="203-E9-9EZ"/>
+                        <outlet property="entryTextView" destination="lMS-yr-Kgv" id="gGy-jA-ock"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VM6-jh-OAy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="817" y="113"/>
+            <point key="canvasLocation" x="815.94202898550736" y="112.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="DVp-xy-zuy">
