--- a/Jouranl/Journal/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Jouranl/Journal/Views/Storyboards/Base.lproj/Main.storyboard
@@ -23,40 +23,41 @@
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="101"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="121" translatesAutoresizingMaskIntoConstraints="NO" id="luM-VZ-BbE">
-                                            <rect key="frame" x="20" y="20" width="374" height="61"/>
+                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="95" translatesAutoresizingMaskIntoConstraints="NO" id="buG-nz-iNy">
+                                            <rect key="frame" x="20" y="8" width="374" height="27.5"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="nZU-Ll-Di4">
-                                                    <rect key="frame" x="0.0" y="0.0" width="117.5" height="57"/>
-                                                    <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entry Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vXE-0W-tC1">
-                                                            <rect key="frame" x="0.0" y="0.0" width="117.5" height="33.5"/>
-                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Body Text" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6em-tQ-gq8">
-                                                            <rect key="frame" x="0.0" y="36.5" width="76" height="20.5"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                    </subviews>
-                                                </stackView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entry Title" textAlignment="natural" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vXE-0W-tC1">
+                                                    <rect key="frame" x="0.0" y="0.0" width="143.5" height="27.5"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="23"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="02/12/20, 07:00 AM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X9g-Ku-Ycb">
-                                                    <rect key="frame" x="238.5" y="0.0" width="135.5" height="18"/>
+                                                    <rect key="frame" x="238.5" y="0.0" width="135.5" height="27.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="135.5" id="y3V-a0-1OK"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                         </stackView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Body Text" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6em-tQ-gq8">
+                                            <rect key="frame" x="20" y="52" width="354" height="18"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="luM-VZ-BbE" firstAttribute="leading" secondItem="L8X-u0-Q0E" secondAttribute="leading" constant="20" id="EUk-WW-lII"/>
-                                        <constraint firstItem="luM-VZ-BbE" firstAttribute="top" secondItem="L8X-u0-Q0E" secondAttribute="top" constant="20" id="S1E-uP-O47"/>
-                                        <constraint firstAttribute="trailing" secondItem="luM-VZ-BbE" secondAttribute="trailing" constant="20" id="Z1O-qk-qVx"/>
-                                        <constraint firstAttribute="bottom" secondItem="luM-VZ-BbE" secondAttribute="bottom" constant="20" id="xcJ-AW-O3Z"/>
+                                        <constraint firstItem="buG-nz-iNy" firstAttribute="top" secondItem="L8X-u0-Q0E" secondAttribute="top" constant="8" id="4a2-vp-BLQ"/>
+                                        <constraint firstItem="6em-tQ-gq8" firstAttribute="leading" secondItem="vXE-0W-tC1" secondAttribute="leading" id="4w2-SG-TrJ"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="6em-tQ-gq8" secondAttribute="trailing" constant="20" id="Ol2-gg-lkO"/>
+                                        <constraint firstAttribute="trailing" secondItem="buG-nz-iNy" secondAttribute="trailing" constant="20" id="Qba-co-xwK"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="6em-tQ-gq8" secondAttribute="bottom" constant="20" id="Qfj-VE-34D"/>
+                                        <constraint firstItem="buG-nz-iNy" firstAttribute="leading" secondItem="L8X-u0-Q0E" secondAttribute="leading" constant="20" id="f9J-xz-BPS"/>
+                                        <constraint firstItem="6em-tQ-gq8" firstAttribute="top" secondItem="buG-nz-iNy" secondAttribute="bottom" constant="16.5" id="m8C-pD-Oo5"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
